partially fixed layout issues, including ui design, and data requests

--- a/public/main.css
+++ b/public/main.css
@@ -1,10 +1,8 @@
 .container-my {
-    padding-top: 100px;
-    margin: auto;
-    width: 100%;
-    max-height: 100vh;
-    max-width: 98vw;
-
+    padding-top: 91px;
+    margin: 0 10px 0 0;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .invisible {
@@ -13,7 +11,7 @@
 
 #navbar {
     background-color: rgb(79, 137, 79, .75);
-    background: transparent;
+    /* background: transparent; */
     backdrop-filter: blur(20px);
     color: black;
     box-shadow: 0 0 10px #000;
@@ -43,7 +41,8 @@ button.navbar-toggler {
     user-select: none;
 }
 
-body {
+html, body {
+    margin: 0;
     min-height: 100vh;
     min-width: 100vw;
     background: url(/background.png) no-repeat;
@@ -188,21 +187,44 @@ a:hover {
 }
 
 #topic-group:hover {
-    background-color: rgba(255, 255, 0, 0.611);
+    background-color: rgba(255, 255, 0, 0.5);
 }
 
 .my-text-muted {
     color: rgba(255, 255, 255, 0.50);
 }
-.row-3 {
-    /* max-height: 33%; */
-    /* min-height: 50px; */
-    margin-bottom: 15px;
+.row-1, .row-3, .row {
+    margin: 5px !important;
+    margin-top: 0 !important;
+}
+
+#column-full {
+    min-height: 100%;
+    max-height: 100%;
+}
+
+.row {
+    min-height: 100%;
+    max-height: 100%;
+}
+
+.row-1 {
+    min-height: 698px;
+    max-height: 698px;
 }
 
 .lock-row {
-    min-width: 101% !important; 
-    max-width: 101% !important;
+    min-width: 100% !important; 
+    max-width: 100% !important;
+}
+
+.split-row-B {
+    min-height: 485px;
+    max-height: 485px;
+    margin: 20px 40px;
+    overflow: hidden;
+    overflow-y: auto;
+    scrollbar-width: none;
 }
 
 .signin-wrapper {
@@ -219,53 +241,60 @@ a:hover {
     transition: all 500ms;
 }
 
-.all-wrapper {
-    min-height: 89.5vh;
-    max-height: 89.5vh;
-    max-width: 600px;
+.wrappers {
     padding: 40px 30px;
-    border: 2px solid rgba(6, 35, 57, .5);
-    background-color: rgb(79, 137, 79, .85);
+    /* border: 2px solid rgba(6, 35, 57, .5); */
+    /* background-color: rgb(79, 137, 79, .85); */
+    /* background-color: #004766a5; */
+    /* background-color: rgba(0, 0, 0, 0.582); */
+    background-color: rgba(255, 239, 213, .5);
     backdrop-filter: blur(8px);
     box-shadow: 0 0 10px #000,
-    inset 0 0 60px rgba(255, 255, 255, 0.348);
-    border-radius: 5px;
+    inset 0 0 60px rgba(255, 255, 255, 0.148);
+    border-radius: 1px;
+    border-bottom-left-radius: 8px;
     transition: all 500ms;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
 }
 
-.single-wrapper, .category-wrapper {
-    min-height: 25vh;
-    max-height: 48.25vh;
-    padding: 40px 30px;
-    border: 2px solid rgba(6, 35, 57, .5);
-    background-color: rgb(79, 137, 79, .85);
-    backdrop-filter: blur(8px);
-    box-shadow: 0 0 10px #000,
-    inset 0 0 60px rgba(255, 255, 255, 0.348);
-    border-radius: 5px;
-    transition: all 500ms;
-    overflow: hidden;
-    overflow-y: auto;
-    scrollbar-width: none;
+.all-wrapper {
+    min-height: 91.28vh;
+    max-height: 91.28vh;
+}
+
+.single-wrapper {
+    min-height: 698px; 
+    max-height: 698px;
+    /* I just couldn't get a percentage to work as intended */
+    /* ...somehow the parent div wouldn't pass it's size. */
+}
+
+.category-wrapper {
+    min-height: 335px;
+    max-height: 335px;
 }
 
 .single-control-wrapper, .category-control-wrapper {
     min-height: 6.25vh;
     max-height: 6.25vh;
-    padding: 40px 30px;
-    border: 2px solid rgba(6, 35, 57, .5);
+    border-radius: 1px;
+    border-bottom-left-radius: 8px;
     background-color: rgb(79, 137, 79, .85);
     backdrop-filter: blur(8px);
     box-shadow: 0 0 10px #000,
-    inset 0 0 60px rgba(255, 255, 255, 0.348);
-    border-radius: 5px;
+    inset 0 0 60px rgba(255, 255, 255, 0.148);
     transition: all 500ms;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
+}
+
+.card-header, .card-footer {
+    background-color: rgba(255, 255, 0, 0.3);
+    text-align: right !important;
+    font-style: italic; 
 }
 
 #selectable {
@@ -273,6 +302,10 @@ a:hover {
     text-shadow: 0 0 .125px rgba(255, 255, 255, 0.5);
 }
 #selectable::selection {
+    background-color: rgba(255, 255, 0, 0.611) !important;
+}
+
+.selected {
     background-color: rgba(255, 255, 0, 0.611) !important;
 }
 
